--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile-pic" src="IMG_20200812_210509.jpg">
+					<img id="profile-pic" src="IMG_20200528_150338_764.jpg">
 					<h5 style="text-align: center; line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-option-wrapper">
