--- a/index.html
+++ b/index.html
@@ -136,24 +136,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Jawahar Navodaya Vidyalaya,Veleru,Krishna Dist,AP</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"> 2014 - 2015 </i></h6>
-          <p><b>CLASS X</b></p>
+          <p><b>CLASS X-CGPA 9.6/10.0</b></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Jawahar Navodaya Vidyalaya,Veleru,Krishna Dist,AP</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2017</h6>
-          <p><b>CLASS XII</b></p>
+          <p><b>CLASS XII-84.2% Out of 100%</b></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SRKR Engineering College,Bhimavaram,AP</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2021</h6>
-          <p><b>Bachelor of Technology(Computer Science and Engineering)</b></p><br>
+          <p><b>Bachelor of Technology(Computer Science and Engineering) CGPA 8.8/10.0 Till Now(6th Semester Ongoing)</b></p><br>
         </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Extra Curricular & Co Curricular Activities</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
