--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Jawahar Navodaya Vidyalaya,Veleru,Krishna Dist,AP</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"> 2014 - 2015 </i></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2015 CBSE BOARD</h6>
           <p><b>CLASS X-CGPA 9.6/10.0</b></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Jawahar Navodaya Vidyalaya,Veleru,Krishna Dist,AP</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2017</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2017 CBSE BOARD</h6>
           <p><b>CLASS XII-84.2% Out of 100%</b></p>
           <hr>
         </div>
@@ -151,23 +151,32 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><b>Bachelor of Technology(Computer Science and Engineering) CGPA 8.8/10.0 Till Now(6th Semester Ongoing)</b></p><br>
         </div>
       </div>
-
+      <div class="w3-container w3-card w3-white">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Certifications</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Hackathons</b></h5>
+          <p>• Completed NPTEL Online Course in “The Joy of Computing Using Python” with 85%(Elite+Silver Category)during Jan-April 2019 conducted by IIT-Madras
+          <p>• Completed “Machine Learning with Python” Course from Coursera</p>             
+          <p>• Completed “IBM Data Science Specialization” Course from Coursera</p>
+          <p>• Completed “Django Specialization” Course from Coursera</p>
+          <p>• Completed “Version Control With Git” Course from Coursera</p>
+          <hr>
+        </div>
+      </div>
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Extra Curricular & Co Curricular Activities</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
+          <h5 class="w3-opacity"><b>Hackathons</b></h5>
           <p>Web Development! All I need to know in one place</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>London Business School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+          <h5 class="w3-opacity"><b>Events</b></h5>
           <p>Master Degree</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>School of Coding</b></h5>
+          <h5 class="w3-opacity"><b>Paper Presentations</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>Bachelor Degree</p><br>
         </div>
