--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Certifications</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Hackathons</b></h5>
+          <h5 class="w3-opacity"><b>Skill Certificates</b></h5>
           <p>• Completed NPTEL Online Course in “The Joy of Computing Using Python” with 85%(Elite+Silver Category)during Jan-April 2019 conducted by IIT-Madras
           <p>• Completed “Machine Learning with Python” Course from Coursera</p>             
           <p>• Completed “IBM Data Science Specialization” Course from Coursera</p>
@@ -166,19 +166,23 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Extra Curricular & Co Curricular Activities</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Hackathons</b></h5>
-          <p>Web Development! All I need to know in one place</p>
+          <h5 class="w3-opacity"><b>Hackathons&Internship Programmes</b></h5>
+          <p>•Participated in the “SKILLZ Conclave” internship Drive Conducted by Smart Bridge on Machine learning</p>
+          <p>•Participated in “Spardha” a National Level Hcakathon Conducted at SRKR Enginnering College, Bhimavaram</p>
+          <p>•Participated in Summer internship program conducted by Smart Bridge Educational Services Pvt Ltd,Hyderabad in June 2019 and was the top performer of the Internship</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Events</b></h5>
-          <p>Master Degree</p>
+          <p>•Participated in season 3 of  Master Orator Championship in August 2018</p>
+          <p>•NCC A Certificate holder</p>
+          <p>•Runner up in the quiz held by Commisionerate of Direct Taxes,Vijayawada on Tax System in India</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Paper Presentations</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelor Degree</p><br>
+          <p>•Presented a poster on “Cloud Computing” at SRKR Engineering College, Bhimavaram on 10th Feb 2019</p><br>
         </div>
       </div>
 
