--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
           </div>
           <br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Hobbies</b></p>
+          <p>Playing Cricket & Kabaddi</p>
+          <br>
+          <p>Reading News</p>
+          <br>
+          <p>Browsing the Mysteries in the World</p>
+          <br>
+
         </div>
       </div><br>
 
@@ -181,7 +189,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Paper Presentations</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>•Presented a poster on “Cloud Computing” at SRKR Engineering College, Bhimavaram on 10th Feb 2019</p><br>
         </div>
       </div>
@@ -204,7 +211,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>Designed By<a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a> Sri(Me)</p>
 </footer>
 
 </body>
