--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
           <p>Browsing the Mysteries in the World</p>
           <br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Strengths</b></p>
+          <p>Creative Thinking</p>
+          <br>
+          <p>Public Speaking</p>
+          <br>
+          <p>Dedicated</p>
+          <br>
+          <p>Determined</p>
+          <br>
+          <p>Responsible</p>
+          <br>
+          <p>Punctual</p>
+          <br>
 
         </div>
       </div><br>
