--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
           <p>Responsible</p>
           <br>
-          <p>Punctual</p>
-          <br>
-
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Resume</b></p>
+          <p>You can download my Resume Here <a target="_blank" href="SRIHARI_P_9398356020.pdf">Download Resume</a></p>
         </div>
       </div><br>
 
